2010-01-08 Jim Garlick <garlick@llnl.gov>

	* rc/rc.nfsroot : Fix rw export test so it will prevent startup
	if root is exported rw but mounted ro.

	* rc/rc.nfsroot* : Touch / not /.foo, which simplifies code.

	* dracut/installkernel : Don't install unionfs or aufs modules.
	These would be loaded from the read-only root not the initramfs.

	* dracut/nfsroot-setdefault : New.

	* dracut/nfsroot-rebuild, dracut/nfsroot-prerm, dracut-postinst :
	Call nfsroot-setdefault to move default symlinks and update
	pxelinux.msg file, starring the default.

	* dracut/Makefile.am, dracut.spec.in : Move scripts from /sbin
	to /usr/sbin.

2010-01-07 Jim Garlick <garlick@llnl.gov>

	* boot/pxelinux.cfg, configpxe/configpxe, dracut/nfsroot-postinst,
	dracut/nfsroot-prerm, dracut/nfsroot-rebuild,
	mkinitrd/nfsroot-kernel-pkg : Standardize naming of initrds to
	"initramfs" (default) or "initramfs-<kver>.img".  Fixes bug where
	initrd paths for non-default kernels were wrong.

	* dracut/nfsroot-rebuild : Silence error when rebuilding pxelinux.cfg.

	* dracut/installkernel : Strip kernel modules to reduce initrd size.

2010-01-07 Jim Garlick <garlick@llnl.gov>

	* : tag 3.4.

	* : Initial dracut integration.

2010-01-06 Jim Garlick <garlick@llnl.gov>

	* : Reorganize and autoconfiscate.

2010-01-03 Jim Garlick <garlick@llnl.gov>

	* : tag 3.3.

	* nfsroot.spec : Revert subpackage split.

2010-01-03 Jim Garlick <garlick@llnl.gov>

	* img/freedos.img : Expand image to 10MB.  Boot with himem enabled.

2010-12-30 Jim Garlick <garlick@llnl.gov>

	* pxelinux.cfg, img/freedos.img : Support serial console.

2010-12-29 Jim Garlick <garlick@llnl.gov>

	* nfsroot.spec : Stop carrying a copy of syslinux executables,
	and simply copy them from syslinux package, now a BuildRequires.

	* pxelinux.*, isolinux.*, nfsroot.spec : Add memtest boot option.

	* pxelinux.*, isolinux.*, nfsroot.spec, img/fdboot.img : Add freedos
	boot option.

	* nfsroot.spec : Split package into three subpackages: