@@ -1,0 +1,2 @@
+This directory is deprecated for RHEL6.
+See 'dracut' for the replacement.
