@@ -41,7 +41,6 @@ make install DESTDIR=${RPM_BUILD_ROOT}
 rm -rf ${RPM_BUILD_ROOT}
 
 %post
-chkconfig --add nfsroot
 PATH=/sbin:/usr/sbin:$PATH
 test -c /dev/console || mknod -m 600 /dev/console c 5 1
 test -c /dev/null    || mknod -m 666 /dev/null    c 1 3
@@ -51,11 +50,6 @@ if ! [ -f %{_sysconfdir}/fstab ]; then
 fi
 mkdir -p -m 755 /writeable
 %{_sbindir}/nfsroot-rebuild
-
-%preun
-if [ "$1" = "0" ]; then
-    /sbin/chkconfig --del nfsroot
-fi
 
 %files
 %defattr(-,root,root)
@@ -79,7 +73,6 @@ fi
 %{_datadir}/nfsroot
 %{_sbindir}/*
 %{_mandir}/man8/*
-%{_initrddir}/nfsroot
 %{_datadir}/dracut/modules.d/*
  %{_sysconfdir}/kernel/postinst.d/*
  %{_sysconfdir}/kernel/prerm.d/*
