@@ -27,7 +27,7 @@
 # Root is a union of /readonly (shared ro nfs root) and /writeable (ramdisk).
 #
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
-INITPROG=/sbin/init
+PREINITPROG=/etc/rc.nfsroot-init
 configfile=/etc/sysconfig/nfsroot
 if [ -f $configfile ]; then
    . $configfile
@@ -66,7 +66,6 @@ mount -n --move /writeable /mnt/writeable
 cd /mnt
 mkdir -p readonly
 pivot_root . readonly
-echo "${prog}: passing control to ${INITPROG}" >&2
-exec chroot . ${INITPROG} "$@" <dev/console >dev/console 2>&1
-echo "${prog}: exec failed"
+echo "${prog}: passing control to ${PREINITPROG}" >&2
+exec chroot . ${PREINITPROG} "$@" <dev/console >dev/console 2>&1
 return 1
