@@ -29,7 +29,7 @@
 #
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
 RAMDIRS="/etc /var"
-INITPROG="/sbin/init"
+PREINITPROG=/etc/rc.nfsroot-init
 configfile=/etc/sysconfig/nfsroot
 if [ -f $configfile ]; then
    . $configfile
@@ -61,6 +61,6 @@ for dir in ${RAMDIRS}; do
     mount -n --bind /writeable${dir} ${dir}
 done
 
-echo "${prog}: passing control to ${INITPROG}" >&2
-exec ${INITPROG} "$@" </dev/console >/dev/console 2>&1
+echo "${prog}: passing control to ${PREINITPROG}" >&2
+exec ${PREINITPROG} "$@" </dev/console >/dev/console 2>&1
 return 1
