@@ -27,7 +27,7 @@
 # Root is a writeable NFS file system.  It had better not be shared!
 #
 prog=rc.nfsroot-none
-INITPROG="/sbin/init"
+PREINITPROG=/etc/rc.nfsroot-init
 configfile=/etc/sysconfig/nfsroot
 if [ -f $configfile ]; then
    . $configfile
@@ -39,6 +39,6 @@ if ! touch / 2>/dev/null; then
    return 1
 fi
 
-echo "$prog: passing control to ${INITPROG}" 2>&1
-exec ${INITPROG} "$@" <dev/console >dev/console 2>&1
+echo "$prog: passing control to ${PREINITPROG}" 2>&1
+exec ${PREINITPROG} "$@" <dev/console >dev/console 2>&1
 return 1
