@@ -28,7 +28,7 @@
 #
 
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
-INITPROG=/sbin/init
+PREINITPROG=/etc/rc.nfsroot-init
 configfile=/etc/sysconfig/nfsroot
 if [ -f $configfile ]; then
    . $configfile
@@ -57,6 +57,6 @@ fi
 cd /writeable
 mkdir -p readonly
 pivot_root . readonly
-echo "${prog}: passing control to ${INITPROG}" >&2
-exec chroot . ${INITPROG} "$@" <dev/console >dev/console 2>&1
+echo "${prog}: passing control to ${PREINITPROG}" >&2
+exec chroot . ${PREINITPROG} "$@" <dev/console >dev/console 2>&1
 return 1
