@@ -30,7 +30,7 @@
 #
 export PATH=/bin:/sbin:/usr/bin:/usr/sbin
 RAMDIRS="/etc /var"
-INITPROG="/sbin/init"
+PREINITPROG=/etc/rc.nfsroot-init
 configfile=/etc/sysconfig/nfsroot
 if [ -f $configfile ]; then
    . $configfile
@@ -94,7 +94,6 @@ done
 cd /mnt
 mkdir -p readonly
 pivot_root . readonly || return 1
-echo "${prog}: passing control to ${INITPROG}" >&2
-exec chroot . ${INITPROG} "$@" <dev/console >dev/console 2>&1
-echo "${prog}: exec failed"
+echo "${prog}: passing control to ${PREINITPROG}" >&2
+exec chroot . ${PREINITPROG} "$@" <dev/console >dev/console 2>&1
 return 1
